--- a/about.html
+++ b/about.html
@@ -2,29 +2,36 @@
 <html lang="en">
 <head>
 
-  <!-- JSON-LD Structured Data for About Page -->
+  <!-- JSON-LD Structured Data for Services Page -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "EducationalOrganization",
-    "name": "Zhev Education Abroad Consultancy",
-    "url": "https://zheveducation.com/about.html",
-    "logo": "assets/logo.png",
-    "description": "Zhev Education is a trusted study abroad consultancy offering personalised counselling, admissions support, SOP/LOR drafting, visa guidance and university selection for USA, UK, Canada, Ireland, Australia and Europe.",
-    "address": {
-      "@type": "PostalAddress",
-      "addressLocality": "Mumbai",
-      "addressRegion": "Maharashtra",
-      "addressCountry": "IN"
-    }
+    "@type": "Service",
+    "name": "Study Abroad Services – Zhev Education",
+    "provider": {
+      "@type": "EducationalOrganization",
+      "name": "Zhev Education Abroad Consultancy",
+      "logo": "assets/logo.png",
+      "url": "https://zheveducation.com/services.html"
+    },
+    "serviceType": [
+      "University Shortlisting",
+      "Application Filing",
+      "SOP Writing",
+      "LOR Assistance",
+      "Student Visa Assistance",
+      "Scholarship Guidance",
+      "Education Loan Support"
+    ],
+    "areaServed": "India"
   }
   </script>
 
-  <link rel="canonical" href="https://zheveducation.com/about.html">
+  <link rel="canonical" href="https://zheveducation.com/services.html">
 
-  <title>About Zhev Education – Best Study Abroad Consultancy India</title>
-  <meta name="description" content="Zhev Education helps students study abroad with personalized guidance for USA, UK, Canada, Ireland, Australia and Europe. Learn about our mission and expertise.">
-  <meta name="keywords" content="about Zhev Education, study abroad consultants in Mumbai, overseas education consultants India">
+  <title>Study Abroad Services | Applications, SOP, Visa, Scholarships</title>
+  <meta name="description" content="Explore Zhev Education's services: university shortlisting, SOP/LOR writing, application help, scholarships, visa support & pre-departure guidance.">
+  <meta name="keywords" content="study abroad services, visa help, SOP writing service, study abroad consultants Mumbai">
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -75,31 +82,82 @@
 </header>
 
 <section>
-  <h2>Who We Are</h2>
+  <h2>Our Services</h2>
   <p>
-    Zhev Education is a leading study abroad consultancy helping students across India pursue higher education in top universities worldwide. We specialise in admissions for the USA, UK, Canada, Ireland, Australia and Europe with complete support for applications, SOPs, LORs, scholarships and visas.
-  </p>
-  <p>
-    Our experts guide students for programs including MS in CS, MBA, Data Science, Engineering, Hospitality, Architecture, Fashion, Design, MBBS, Nursing and more.
-  </p>
-</section>
-
-<section>
-  <h2>Our Mission</h2>
-  <p>
-    Our mission is to simplify global education for Indian students by offering ethical, transparent and result-driven counselling. We ensure every student receives personalised guidance based on academic background, budget and long-term career aspirations.
+    Zhev Education provides complete end-to-end support for students planning to study abroad. Whether
+    you’re applying to the USA, UK, Canada, Ireland, Australia, Europe or UAE, our expert counsellors help
+    you build a strong, competitive application with personalised guidance at every step.
   </p>
 </section>
 
 <section>
-  <h2>Why Students Trust Us</h2>
+  <h2>What We Offer</h2>
+
+  <h3>1. University Shortlisting</h3>
+  <p>
+    We analyse your academic background, test scores, projects, internships and budget to recommend
+    target, ambitious and safe universities. We specialise in MS in CS, MBA, Data Science, AI/ML,
+    Engineering, Healthcare, Hospitality, Architecture, Fashion, MBBS and more.
+  </p>
+
+  <h3>2. SOP & LOR Drafting</h3>
+  <p>
+    Our expert writers create impactful SOPs and LORs tailored to the program and university. Each
+    document undergoes multiple reviews to ensure clarity, originality and alignment with admissions
+    expectations.
+  </p>
+
+  <h3>3. Application Filing</h3>
+  <p>
+    We assist with all application portals, document uploads, essay checks, resume formatting,
+    transcript evaluation (WES) and deadline tracking.
+  </p>
+
+  <h3>4. Scholarship Guidance</h3>
+  <p>
+    We help students identify university-funded and external scholarships, tuition waivers, research or
+    teaching assistantships and financial planning for study abroad.
+  </p>
+
+  <h3>5. Visa Assistance</h3>
+  <p>
+    Our visa experts support with documentation, DS-160 filing, GTE/SOP for visas, mock interviews,
+    sponsorship letters and financial templates for USA, UK, Canada, Australia and Ireland.
+  </p>
+
+  <h3>6. Pre-Departure & Accommodation</h3>
+  <p>
+    We help students with accommodation options, forex, travel planning, insurance, packing lists and
+    university registrations after arrival.
+  </p>
+</section>
+
+<section>
+  <h2>Service Packages</h2>
   <ul>
-    <li>Accurate university shortlisting</li>
-    <li>Professional SOP & LOR drafting</li>
-    <li>Visa filing and mock interviews</li>
-    <li>Scholarship & loan guidance</li>
-    <li>Pre-departure & post-arrival support</li>
+    <li><strong>Apply Smart:</strong> Shortlisting + SOP Review + Application Check</li>
+    <li><strong>Apply Complete:</strong> Full Filing + LOR + Scholarships</li>
+    <li><strong>Visa Secure:</strong> Visa Documents + Mock Interviews</li>
+    <li><strong>All-Inclusive:</strong> Full admissions + visa + pre-departure support</li>
   </ul>
+</section>
+
+<section>
+  <h2>Testimonials</h2>
+  <div class="grid">
+    <div class="card">
+      <strong>Devansh R.</strong>
+      <p>"Their SOP team helped me craft a strong MS in CS application. I got a scholarship too."</p>
+    </div>
+    <div class="card">
+      <strong>Meera S.</strong>
+      <p>"Visa preparation and mock interviews gave me full confidence."</p>
+    </div>
+    <div class="card">
+      <strong>Samir A.</strong>
+      <p>"Great guidance for scholarships and loan documentation."</p>
+    </div>
+  </div>
 </section>
 
 <footer style="background:#2F3A56; color:white; text-align:center; padding:12px;">
