--- a/about.html
+++ b/about.html
@@ -2,36 +2,28 @@
 <html lang="en">
 <head>
 
-  <!-- JSON-LD Structured Data for Services Page -->
+  <!-- JSON-LD Structured Data for Countries Page -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "Service",
-    "name": "Study Abroad Services – Zhev Education",
-    "provider": {
-      "@type": "EducationalOrganization",
-      "name": "Zhev Education Abroad Consultancy",
-      "logo": "assets/logo.png",
-      "url": "https://zheveducation.com/services.html"
-    },
-    "serviceType": [
-      "University Shortlisting",
-      "Application Filing",
-      "SOP Writing",
-      "LOR Assistance",
-      "Student Visa Assistance",
-      "Scholarship Guidance",
-      "Education Loan Support"
-    ],
-    "areaServed": "India"
+    "@type": "EducationalOrganization",
+    "name": "Zhev Education Abroad Consultancy – Study Destinations",
+    "url": "https://zheveducation.com/countries.html",
+    "logo": "assets/logo.png",
+    "description": "Study abroad guidance for USA, UK, Canada, Australia, Ireland, Europe, and the Middle East with programs including MS in CS, MBA, MBBS, Architecture, Fashion, Sports, Music, Hotel Management and more.",
+    "areaServed": [
+      "USA", "Canada", "UK", "Ireland", "Australia", "New Zealand",
+      "Germany", "France", "Italy", "Netherlands", "Sweden", "Finland", "Spain",
+      "UAE", "Qatar", "Saudi Arabia"
+    ]
   }
   </script>
 
-  <link rel="canonical" href="https://zheveducation.com/services.html">
+  <link rel="canonical" href="https://zheveducation.com/countries.html">
 
-  <title>Study Abroad Services | Applications, SOP, Visa, Scholarships</title>
-  <meta name="description" content="Explore Zhev Education's services: university shortlisting, SOP/LOR writing, application help, scholarships, visa support & pre-departure guidance.">
-  <meta name="keywords" content="study abroad services, visa help, SOP writing service, study abroad consultants Mumbai">
+  <title>Top Study Destinations – USA, Canada, UK, Europe, Middle East | Zhev Education</title>
+  <meta name="description" content="Explore USA, UK, Canada, Australia, Ireland, Europe, and Middle East destinations with programs like MS in CS, MBA, MBBS, Hotel Management, Architecture, Fashion, Sports, Music, Game Design and more.">
+  <meta name="keywords" content="study abroad, study in Europe, study in USA, study in Canada, MBBS abroad, hotel management abroad, fashion design abroad, game design abroad, Middle East study programs">
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -52,7 +44,7 @@
     .hamburger { display:none; font-size:30px; cursor:pointer; color:#fff; }
 
     @media (max-width: 768px) {
-      nav { display:none; width:100%; background:#2F3A56; padding:10px; }
+      nav { display:none; background:#2F3A56; width:100%; padding:10px; }
       nav a { display:block; margin:10px 0; }
       .hamburger { display:block; }
     }
@@ -82,63 +74,65 @@
 </header>
 
 <section>
-  <h2>Our Services</h2>
+  <h2>Study in USA</h2>
   <p>
-    Zhev Education provides complete end-to-end support for students planning to study abroad. Whether
-    you’re applying to the USA, UK, Canada, Ireland, Australia, Europe or UAE, our expert counsellors help
-    you build a strong, competitive application with personalised guidance at every step.
+    The USA offers world-class education with unmatched opportunities in STEM (MS in CS, AI/ML, Cybersecurity,
+    Data Science), Business (MBA), Engineering, Healthcare, Film, Music, Sports, Game Design, Fashion, and more.
+    With OPT and CPT pathways, students gain strong job opportunities post-studies.
+  </p>
+
+  <h2>Study in Canada</h2>
+  <p>
+    Canada is ideal for PGWP pathways, high-quality education and permanent residency routes. Popular programs
+    include MS in CS, Data Analytics, Nursing, Hospitality, Culinary Arts, MBBS pathways, Architecture, and
+    Business. Co-op-based courses give strong industry exposure.
+  </p>
+
+  <h2>Study in UK & Ireland</h2>
+  <p>
+    UK offers a 1-year Master’s degree in fields such as Management, Engineering, Fashion, Sports Science,
+    Hospitality, Architecture and Design. Ireland is a booming tech hub — excellent for CS, Data, Cloud,
+    DevOps, Pharmaceuticals and Engineering with a 2-year post-study work visa.
+  </p>
+
+  <h2>Study in Australia & New Zealand</h2>
+  <p>
+    Known for PR-friendly pathways and great salaries in Nursing, Healthcare, IT, Architecture, Sports,
+    Fitness Training, Aviation, Marine, Hotel Management, and Business. Their universities are globally
+    ranked and offer hands-on, practical education.
+  </p>
+
+  <h2>Study in Europe (Germany, France, Italy, Netherlands, Sweden, Finland, Spain)</h2>
+  <p>
+    Europe offers affordable or tuition-free education. Germany excels in Engineering, Robotics, Automotive,
+    IT and Architecture. France is top-tier for Fashion, Luxury, Culinary Arts & Hospitality. Italy leads in
+    Design, Architecture, Fine Arts and Music. Nordic countries excel in Gaming, Psychology, Renewable Energy
+    and Engineering.
+  </p>
+
+  <h2>Study in Middle East (UAE, Qatar, Saudi Arabia)</h2>
+  <p>
+    The Middle East is rapidly becoming a global education hub. Popular programs include Hotel Management,
+    Aviation, Business, Digital Marketing, Sports Management, Fashion Styling, Hair & Beauty Therapy,
+    Game Design, Event Management and Medical Allied courses.
   </p>
 </section>
 
 <section>
-  <h2>What We Offer</h2>
-
-  <h3>1. University Shortlisting</h3>
-  <p>
-    We analyse your academic background, test scores, projects, internships and budget to recommend
-    target, ambitious and safe universities. We specialise in MS in CS, MBA, Data Science, AI/ML,
-    Engineering, Healthcare, Hospitality, Architecture, Fashion, MBBS and more.
-  </p>
-
-  <h3>2. SOP & LOR Drafting</h3>
-  <p>
-    Our expert writers create impactful SOPs and LORs tailored to the program and university. Each
-    document undergoes multiple reviews to ensure clarity, originality and alignment with admissions
-    expectations.
-  </p>
-
-  <h3>3. Application Filing</h3>
-  <p>
-    We assist with all application portals, document uploads, essay checks, resume formatting,
-    transcript evaluation (WES) and deadline tracking.
-  </p>
-
-  <h3>4. Scholarship Guidance</h3>
-  <p>
-    We help students identify university-funded and external scholarships, tuition waivers, research or
-    teaching assistantships and financial planning for study abroad.
-  </p>
-
-  <h3>5. Visa Assistance</h3>
-  <p>
-    Our visa experts support with documentation, DS-160 filing, GTE/SOP for visas, mock interviews,
-    sponsorship letters and financial templates for USA, UK, Canada, Australia and Ireland.
-  </p>
-
-  <h3>6. Pre-Departure & Accommodation</h3>
-  <p>
-    We help students with accommodation options, forex, travel planning, insurance, packing lists and
-    university registrations after arrival.
-  </p>
-</section>
-
-<section>
-  <h2>Service Packages</h2>
+  <h2>Popular Offbeat Programs</h2>
   <ul>
-    <li><strong>Apply Smart:</strong> Shortlisting + SOP Review + Application Check</li>
-    <li><strong>Apply Complete:</strong> Full Filing + LOR + Scholarships</li>
-    <li><strong>Visa Secure:</strong> Visa Documents + Mock Interviews</li>
-    <li><strong>All-Inclusive:</strong> Full admissions + visa + pre-departure support</li>
+    <li>Hotel Management & Hospitality</li>
+    <li>Fashion Design & Luxury Brand Management</li>
+    <li>Music, Sound Engineering & Film Production</li>
+    <li>Sports Science, Physiotherapy & Fitness Training</li>
+    <li>Game Design, Animation & VFX</li>
+    <li>Culinary Arts, Baking & Pastry</li>
+    <li>Hair Styling, Cosmetology & Beauty Therapy</li>
+    <li>Architecture, Interior & Urban Design</li>
+    <li>MBBS, Dentistry & Allied Health Sciences</li>
+    <li>Photography & Media Studies</li>
+    <li>Aviation, Cabin Crew & Airport Management</li>
+    <li>Marine Science & Environmental Studies</li>
   </ul>
 </section>
 
@@ -146,16 +140,16 @@
   <h2>Testimonials</h2>
   <div class="grid">
     <div class="card">
-      <strong>Devansh R.</strong>
-      <p>"Their SOP team helped me craft a strong MS in CS application. I got a scholarship too."</p>
+      <strong>Priya K.</strong>
+      <p>"I chose Ireland for Data Science — Zhev explained everything clearly and helped me choose the right country."</p>
     </div>
     <div class="card">
-      <strong>Meera S.</strong>
-      <p>"Visa preparation and mock interviews gave me full confidence."</p>
+      <strong>Rahul D.</strong>
+      <p>"Amazing help selecting Europe for Hotel Management. Their guidance was truly helpful."</p>
     </div>
     <div class="card">
-      <strong>Samir A.</strong>
-      <p>"Great guidance for scholarships and loan documentation."</p>
+      <strong>Simran B.</strong>
+      <p>"Perfect guidance for studying fashion in Italy — I am grateful!"</p>
     </div>
   </div>
 </section>
