--- a/contact.html
+++ b/contact.html
@@ -9,84 +9,65 @@
     "@type": ["ContactPage", "EducationalOrganization", "LocalBusiness"],
     "name": "Zhev Education Abroad Consultancy",
     "url": "https://zheveducation.com/contact.html",
-    "description": "Contact Zhev Education for study abroad guidance, admissions support, visa filing, SOP/LOR drafting and counselling for USA, UK, Canada, Australia, Ireland and Europe.",
-    "telephone": "+91-9594538979",
+    "logo": "assets/logo.png",
+    "description": "Contact Zhev Education for personalised study abroad counselling, admissions support, SOP/LOR drafting, visa assistance and guidance for USA, UK, Canada, Australia, Ireland, Europe and UAE.",
+    "telephone": "+91-9967200345",
     "email": "info@zheveducation.com",
     "address": {
       "@type": "PostalAddress",
-      "streetAddress": "Mumbai",
       "addressLocality": "Mumbai",
       "addressRegion": "Maharashtra",
-      "postalCode": "400074",
       "addressCountry": "IN"
-    },
-    "contactPoint": {
-      "@type": "ContactPoint",
-      "telephone": "+91-9594538979",
-      "email": "info@zheveducation.com",
-      "contactType": "customer service",
-      "areaServed": "IN"
-    },
-    "sameAs": [
-      "https://www.facebook.com/",
-      "https://www.instagram.com/",
-      "https://www.linkedin.com/"
-    ],
-    "review": [
-      {
-        "@type": "Review",
-        "author": "Anjali T",
-        "reviewBody": "Quick response and clear guidance. They helped me shortlist the perfect universities.",
-        "reviewRating": { "@type": "Rating", "ratingValue": "5" }
-      },
-      {
-        "@type": "Review",
-        "author": "Karan M",
-        "reviewBody": "Very supportive and transparent. They helped with my application and visa end-to-end.",
-        "reviewRating": { "@type": "Rating", "ratingValue": "5" }
-      },
-      {
-        "@type": "Review",
-        "author": "Riya S",
-        "reviewBody": "Amazing scholarship guidance. The team follows up well and is very professional.",
-        "reviewRating": { "@type": "Rating", "ratingValue": "5" }
-      }
-    ]
+    }
   }
   </script>
 
   <link rel="canonical" href="https://zheveducation.com/contact.html">
-  <meta name="google-site-verification" content="UDWz14iODOz9mqHBeFAhVdkxtOlqV3TghXXDoQKZwv4">
 
-  <!-- SEO Meta Tags -->
-  <title>Contact Zhev Education – Study Abroad Consultants India</title>
-  <meta name="description" content="Contact Zhev Education for study abroad counselling, university admissions, SOP/LOR writing, visa assistance and scholarship guidance for USA, Canada, UK, Europe and Australia.">
-  <meta name="keywords" content="contact Zhev Education, study abroad consultants contact, speak to study abroad expert, education consultancy India, visa assistance, SOP help, abroad admissions support">
-  <meta name="author" content="Zhev Education Consultancy">
-
-  <!-- Open Graph -->
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="Contact Zhev Education – Study Abroad Consultancy India">
-  <meta property="og:description" content="Get in touch for personalised study abroad counselling and end-to-end admissions support.">
-  <meta property="og:url" content="https://zheveducation.com/contact.html">
-  <meta property="og:image" content="https://contactus328-ai.github.io/zheveducation/assets/og-image.png">
-
-  <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Contact Zhev Education – Study Abroad Consultancy">
-  <meta name="twitter:description" content="Reach out for admissions, applications, visas and scholarship support.">
-  <meta name="twitter:image" content="https://contactus328-ai.github.io/zheveducation/assets/og-image.png">
+  <title>Contact Zhev Education – Study Abroad Consultants in Mumbai</title>
+  <meta name="description" content="Get in touch with Zhev Education for admissions, applications, SOP/LOR, scholarships and visa support for USA, UK, Canada, Ireland, Australia, Europe and UAE.">
+  <meta name="keywords" content="contact study abroad consultants, Zhev Education contact, study abroad Mumbai, visa assistance Mumbai">
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <link rel="stylesheet" href="assets/style.css">
+
+  <style>
+    header {
+      background: #2F3A56;
+      padding: 15px;
+      color: #fff;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+    .logo { height: 60px; width: auto; }
+    header nav a { color: #fff; margin-left: 20px; text-decoration: none; }
+    .hamburger { display:none; font-size:30px; cursor:pointer; color:#fff; }
+
+    @media (max-width: 768px) {
+      nav { display:none; background:#2F3A56; width:100%; padding:10px; }
+      nav a { display:block; margin:10px 0; }
+      .hamburger { display:block; }
+    }
+  </style>
+
+  <script>
+    function toggleMenu() {
+      var nav = document.getElementById("mobileNav");
+      nav.style.display = nav.style.display === "block" ? "none" : "block";
+    }
+  </script>
+
 </head>
 
 <body>
 
 <header>
-  <h1>Contact Us</h1>
-  <nav>
+  <img src="assets/logo.png" alt="Zhev Education Logo" class="logo">
+  <span class="hamburger" onclick="toggleMenu()">☰</span>
+  <nav id="mobileNav">
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="services.html">Services</a>
@@ -96,22 +77,16 @@
 </header>
 
 <section>
-  <h2>Get in Touch With Us</h2>
+  <h2>Contact Us</h2>
   <p>
-    Whether you're planning to study in the USA, Canada, UK, Ireland, Australia, Europe or the Middle East, 
-    Zhev Education provides complete support for your international education journey.  
-    Reach out to us for personalised counselling, university shortlisting, SOP/LOR drafting, 
-    scholarships and visa assistance.
-  </p>
-  <p>
-    Our experts respond quickly and provide accurate guidance based on your background, budget, preferred 
-    course and destination. We help with programs such as MS in Computer Science, Data Science, MBA, Nursing, 
-    Hospitality, Architecture, Culinary Arts, Fashion Design, MBBS, Aviation, Sports, Game Design and many more.
+    Whether you're applying to the USA, UK, Canada, Europe, Australia or the Middle East, Zhev Education provides
+    complete support through your study abroad journey. Reach out for personalised guidance, university
+    shortlisting, SOP/LOR drafting, scholarship support, visa filing and pre-departure assistance.
   </p>
 </section>
 
 <section>
-  <h2>Contact Details</h2>
+  <h2>Get in Touch</h2>
   <p><strong>Email:</strong> <a href="mailto:info@zheveducation.com">info@zheveducation.com</a></p>
   <p><strong>Phone:</strong> +91 99672 00345</p>
   <p><strong>Location:</strong> Mumbai, Maharashtra, India</p>
@@ -119,19 +94,16 @@
 
 <section>
   <h2>Request a Callback</h2>
-  <p>
-    To receive a personalised study abroad plan, send us the following details:
-  </p>
+  <p>To help us guide you better, share:</p>
   <ul>
-    <li>Course of interest (e.g., MS in CS, MBA, Nursing, Fashion, Game Design, MBBS, etc.)</li>
-    <li>Preferred countries (USA, Canada, Europe, Australia, UAE, etc.)</li>
-    <li>Your academic background (12th / bachelor's / work experience)</li>
-    <li>Budget range & scholarship requirements</li>
-    <li>Intended intake month/year</li>
+    <li>Course (MS in CS, MBA, Fashion, Nursing, MBBS, Game Design, etc.)</li>
+    <li>Preferred countries (USA, Canada, UK, Ireland, Australia, Europe, UAE)</li>
+    <li>Your educational background</li>
+    <li>Budget & scholarship preference</li>
+    <li>Target intake month/year</li>
   </ul>
-  <p>
-    Email your details to <strong>info@zheveducation.com</strong> or message us on WhatsApp for quick assistance.
-  </p>
+
+  <p>Email your details to <strong>info@zheveducation.com</strong> or contact us on WhatsApp.</p>
 </section>
 
 <section>
@@ -143,17 +115,17 @@
     </div>
     <div class="card">
       <strong>Karan M.</strong>
-      <p>"Very supportive team. They guided me through the visa process step-by-step."</p>
+      <p>"Very supportive team. Perfect visa documentation and interview preparation."</p>
     </div>
     <div class="card">
       <strong>Riya S.</strong>
-      <p>"Amazing scholarship guidance and proper assistance throughout the application."</p>
+      <p>"Amazing scholarship assistance. Very professional and reliable service."</p>
     </div>
   </div>
 </section>
 
-<footer>
-  <p>© 2025 Zhev Education Abroad Consultancy</p>
+<footer style="background:#2F3A56; color:white; text-align:center; padding:12px;">
+  © 2025 Zhev Education Abroad Consultancy
 </footer>
 
 </body>
